--- a/Testing Components/MazeGen.html
+++ b/Testing Components/MazeGen.html
@@ -8,7 +8,7 @@
 	<body>
 		<script>
 			function genWilsonMaze( h, w ) {
-				var maze = [ ];
+				var maze = [ ];					//Fill Maze
 				for( var i = 0; i < h; i++ ) {
 					maze.push( [ ] );
 					for( var j = 0; j < w; j++ ) {
@@ -17,14 +17,14 @@
 						);
 					}
 				}
-
+										//Randomly chose a point
 				var next = maze[ Math.floor( h * Math.random( ) ) ]
 					[ Math.floor( w * Math.random( ) ) ];
-				next.n = 1;
-				var pathNum = 2;
+				next.n = 1;					//Set path number to 1 as the very first
+				var pathNum = 2;				//All following paths are two or greater
 
 				do {
-					var open = [ ];
+					var open = [ ];				//Find all unexplored points
 					for( var k = 0; k < h; k++ ) {
 						for( var l = 0; l < w; l++ ) {
 							if( !maze[ k ][ l ].n ) {
@@ -32,17 +32,16 @@
 							}
 						}
 					}
-					//alert( open.length );
-					if( open.length < 1 ) {
+					if( open.length < 1 ) {			//Escape when all explored
 						break;
 					}
 					var next = Math.floor( open.length * Math.random( ) );
-					var cc = open[ next ];
+					var cc = open[ next ];			//Pick a random unexplored point
 					cc.n = pathNum;
 
-					while( cc.n == pathNum ) {
+					while( cc.n == pathNum ) {	
 						var opts = [ ];
-						if( cc.y + 1 < h ) {
+						if( cc.y + 1 < h ) {		//Check options around point
 							opts.push( { n:0, b:maze[ cc.y + 1 ][ cc.x ] } );
 						}
 						if( cc.x + 1 < w ) {
@@ -54,38 +53,39 @@
 						if( cc.x - 1 >= 0 ) {
 							opts.push( { n:3, b:maze[ cc.y ][ cc.x - 1 ] } );
 						}
-
+										//Pick an option
 						var next = opts[ Math.floor( opts.length * Math.random( ) ) ];
 
-						if( next.b.n == pathNum ) {
+						if( next.b.n == pathNum ) {	//Traveler finds itself
 							var bc = next.b;
+										//Undo path until at collision
 							while( ( cc.x != bc.x ) || ( cc.y != bc.y ) ) {
-								//find before direction
+										//What direction is my parent
 								for( var m = 0; m < 4; m++ ) {
 									if( cc.c[ m ] && cc.c[ m ].x == cc.p.x && cc.c[ m ].y == cc.p.y ) {
 										next = m;
 									}
-								}//readjust
+								}
+										//back up to parent
 								var back = ( next + 2 >= 4 ) ? ( next - 2 ) : ( next + 2 );
-
 								cc.c[ next ] = null;	//undo current adjacent
 								cc.n = null;		//undo current pathNum
 								cc = cc.p		//set current to before
 								cc.c[ back ].p = null;	//undo current parent
 								cc.c[ back ] = null;	//undo before adjacent
 							}
-						} else {
+						} else {			//Found different point, update
 							var back = ( next.n + 2 >= 4 ) ? ( next.n - 2 ) : ( next.n + 2 );
 							cc.c[ next.n ] = next.b;	//set next into cur adj
 							next.b.p = cc;			//set next parent
 							next.b.c[ back ] = cc;		//set next adj to cur
-							if( !next.b.n ) {
+							if( !next.b.n ) {	//Found a point not in a path
 								next.b.n = pathNum;	//set cur number
 							}
 							cc = next.b;
 						}
 					}
-					pathNum++;
+					pathNum++;				//Set number for next path
 
 				} while( 1 );
 				return( maze );
@@ -96,7 +96,7 @@
 
 
 			function genPrimMaze( h, w ) {
-				var maze = [ ];
+				var maze = [ ];					//Fill Maze
 				for( var i = 0; i < h; i++ ) {
 					maze.push( [ ] );
 					for( var j = 0; j < w; j++ ) {
@@ -112,12 +112,12 @@
 
 				var list = [ cc ];
 
-				do {
+				do {						//Grab random point from list
 					var next = Math.floor( list.length * Math.random( ) );
 					cc = list[ next ];
 					list[ next ] = list[ list.length - 1 ];
 					list.pop( );
-
+										//Check and add adjacents to list
 					if( ( cc.y + 1 < h && ( maze[ cc.y + 1 ][ cc.x ].u ) ) ) {
 						list.push( maze[ cc.y + 1 ][ cc.x ] );
 						maze[ cc.y + 1 ][ cc.x ].u = false;
@@ -155,8 +155,8 @@
 
 
 
-			function genDFSMaze( h, w ) {		//Problem here with edges.
-				var maze = [ ];
+			function genDFSMaze( h, w ) {
+				var maze = [ ];					//Fill maze
 				for( var i = 0; i < h; i++ ) {
 					maze.push( [ ] );
 					for( var j = 0; j < w; j++ ) {
@@ -171,7 +171,7 @@
 				var sc = cc;
 
 				cc.u = false;
-				do {
+				do {						//Check adjacents, and pick one
 					var opts = [ ];
 					if( ( cc.y + 1 < h && ( maze[ cc.y + 1 ][ cc.x ].u ) ) ) {
 						opts.push( { n:0, b:maze[ cc.y + 1 ][ cc.x ] } );
@@ -185,7 +185,7 @@
 					if( ( cc.x - 1 >= 0 ) && ( maze[ cc.y ][ cc.x - 1 ].u ) ) {
 						opts.push( { n:3, b:maze[ cc.y ][ cc.x - 1 ] } );
 					}
-					if( opts.length > 0 ) {
+					if( opts.length > 0 ) {			//Update picked adjacent
 						var next = opts[ Math.floor( opts.length * Math.random( ) ) ];
 						var back = ( next.n + 2 >= 4 ) ? ( next.n - 2 ) : ( next.n + 2 );
 						cc.c[ next.n ] = next.b;	//set next into cur adj
@@ -207,23 +207,25 @@
 			class wallTraverser {
 				constructor( maze, unit ) {
 					this.maze = maze;
-					this.unit = unit;
-					this.pos = maze[ 0 ][ 0 ];
-					this.vPos = [
+					this.unit = unit;			//How large should the maze corridor width be
+					this.pos = maze[ 0 ][ 0 ];		//Starting point
+					this.vPos = [				//Where post is relative to point
 						{ x:unit, y:unit }, { x:unit, y:0 }, { x:0, y:0 }, { x:0, y:unit }
 					];
-					this.dir = 2;
-					this.path = [ { x:0, y:0 } ];
+					this.dir = 2;				//Traverser direction
+					this.path = [ { x:0, y:0 } ];		//Path so far
 				}
 				
 				traverse( ) {
-					do {
-						if( this.pos.c[ this.dir ] ) {		
+					do {					//Forward open
+						if( this.pos.c[ this.dir ] ) {
 							this.goForward( );
+										//Right open
 							if( this.pos.c[ this.toTheRight( ) ] ) {
 								this.dir = this.toTheRight( );
 								this.placeVert( );
 								this.goForward( );
+										//Next right open as well, for small c hallways
 								if( this.pos.c[ this.toTheRight( ) ] ) {
 									this.dir = this.toTheRight( );
 									this.placeVert( );
@@ -282,13 +284,16 @@
 				
 				traverse( ) {
 					do {
+										//Check right, since no advanced checks needed
 						if( this.pos.c[ this.toTheRight( ) ] ) {
 							this.dir = this.toTheRight( );
 							this.goForward( );
 							this.placeVert( );
+										//Check forward
 						} else if( this.pos.c[ this.dir ] ) {	
 							this.goForward( );
 							this.placeVert( );
+										//Turn left otherwise
 						} else {
 							this.dir = this.toTheLeft( );
 						}
@@ -335,7 +340,7 @@
 					.attr( "width", unit * ( 2 * maze[ 0 ].length + 1 ) )
 					.style( "border", "1px solid black" );
 
-				var blocks = [ ];
+				var blocks = [ ];				//Fill maze with squares, misnomer
 				for( var i = 0; i < 2 * maze.length + 1; i++ ) {
 					blocks.push( [ ] );
 					for( var j = 0; j < 2 * maze[ 0 ].length + 1; j++ ) {
@@ -349,8 +354,9 @@
 					}
 				}
 
-				for( var i = 0; i < maze.length; i++ ) {
+				for( var i = 0; i < maze.length; i++ ) {	//Fill current checked block
 					for( var j = 0; j < maze[ 0 ].length; j++ ) {
+										//Fill chldren of current block
 						blocks[ 2 * i + 1 ][ 2 * j + 1 ].style( "fill", "#000000ff" );
 						if( maze[ i ][ j ].c[ 0 ] ) {
 							blocks[ 2 * i + 2 ][ 2 * j + 1 ].style( "fill", "#000000ff" );
@@ -377,6 +383,7 @@
 					.attr( "height", unit * ( maze.length + 2 ) )
 					.attr( "width", unit * ( maze[ 0 ].length + 2 ) )
 					.style( "border", "1px solid black" );
+										//FIll maze with blocks
 				for( var i = 0; i < maze.length; i++ ) {
 					for( var j = 0; j < maze[ 0 ].length; j++ ) {
 						svg.append( "rect" )
@@ -387,7 +394,7 @@
 							.style( "fill", "#000000ff" );
 					}
 				}
-				var hold = '';
+				var hold = '';					//Fill path from traverser
 				for( var k = 0; k < traveler.path.length; k++ ) {
 					var pt = traveler.path[ k ];
 					hold += ( ( k == 0 ) ? ( 'M' ) : ( 'L' ) ) + ( unit + pt.x ) + ',' + ( unit + pt.y );
@@ -404,6 +411,7 @@
 			var unit = 5;
 
 			
+			//Long corridors
 			var maze = genDFSMaze( 25, 25 );
 			squareMaze( maze, unit, "#ffff00" );
 
@@ -416,7 +424,7 @@
 			lineMaze( maze, traveler12, "#ffff00" );
 
 
-
+			//Lotsa short dead ends
 			var maze2 = genPrimMaze( 25, 25 );
 			squareMaze( maze2, unit, "#00ff00" );
 
@@ -429,7 +437,7 @@
 			lineMaze( maze2, traveler22, "#00ff00" );
 			
 
-
+			//Mix of previous two
 			var maze3 = genWilsonMaze( 25, 25 );
 			squareMaze( maze3, unit, "#00ffff" );
 
