--- a/polygon/polygonSelect.html
+++ b/polygon/polygonSelect.html
@@ -55,6 +55,9 @@
                         <a href="polygonAlgs.html#3_cStart">Triangle Search 1 (Center Start)</a>
                     </li>
                     <li>
+                        <a href="polygonAlgs.html#3_cStart_3r">Triangle Search 1 (3 Robots + Center Start)</a>
+                    </li>
+                    <li>
                         <a href="polygonAlgs.html#3_wStart">Triangle Search 1 (Wall Start)</a>
                     </li>
                     <li>
@@ -65,6 +68,14 @@
                 <ul id="alglist square" class="algs" style="display:none;">
                     <li>
                         <a href="polygonAlgs.html#4_cStart">Square Search 1 (Center Start)</a>
+                    </li>
+                    <!--
+                    <li>
+                        <a href="polygonAlgs.html#4_cStart_3r">Square Search 1 (3 Robots + Center Start)</a>
+                    </li>
+                    -->
+                    <li>
+                        <a href="polygonAlgs.html#4_cStart_4r">Square Search 1 (4 Robots + Center Start)</a>
                     </li>
                     <li>
                         <a href="polygonAlgs.html#4_wStart">Square Search 1 (Wall Start)</a>
