--- a/line/linevis.html
+++ b/line/linevis.html
@@ -13,15 +13,18 @@
             <line x1=20 y1=33 x2=20 y2=37 style="stroke:#000000;stroke-width:.25"></line>
             <line x1=80 y1=33 x2=80 y2=37 style="stroke:#000000;stroke-width:.25"></line>
             <line x1=50 y1=33 x2=50 y2=37 style="stroke:#000000;stroke-width:.25"></line>
-            <line x1=20 y1=95 x2=80 y2=95 style="stroke:#000000;stroke-width:.25"></line>
-            <line x1=20 y1=35 x2=20 y2=95 style="stroke:#000000;stroke-width:.25"></line>
+            <line x1=15 y1=95 x2=80 y2=95 style="stroke:#000000;stroke-width:.25"></line>
+            <line x1=15 y1=35 x2=15 y2=95 style="stroke:#000000;stroke-width:.25"></line>
 
-            <text transform="translate(15, 65)rotate(-90)" style="font-size:2.5; text-anchor:middle">Time</text>
+            <text transform="translate(10, 65)rotate(-90)" style="font-size:2.5; text-anchor:middle">Time</text>
             <text x=80 y=30 id="exittext" style="font-size:2.5; text-anchor:middle"></text>
+            <text x=80 y=30 id="terminationtext" style="font-size:2.5; text-anchor:middle"></text>
             <text x=20 y=15 id="timetext" style="font-size:2.5; text-anchor:middle"></text>
-            <text x=20 y=20 id="speedtext" style="font-size:2.5; text-anchor:middle"></text>
+            <text x=15 y=15 id="totaltime" style="font-size:2.5;">Time: 0.00</text>
+            <text x=15 y=20 id="speedtext" style="font-size:2.5;"></text>
             <text x=20 y=30 id="negativetext" style="font-size:2.5; text-anchor:middle;"></text>
             <text x=80 y=30 id="positivetext" style="font-size:2.5; text-anchor:middle"></text>
+
 
             <circle cx=50 cy=35 r=1 id="origin" style="stroke:#000000; fill:#ffffff; stroke-width:0.25"></circle>
 
@@ -37,21 +40,28 @@
     function main() {
         icll = [
             [
-                ["#ff0000"],
+                ["#ff0000", false, 0],
                 ["Amplify", {scale:2, direction:-1}],
-                //["wait", [null]],
+                ["Wait", {time:null}],
                 ["GoToExit", [null]]
             ],
             [
-                ["#00ff00"],
+                ["#00ff00", false, 0],
+                ["Amplify", {scale:2, direction:-1}],
+                ["Wait", {time:null}],
+                ["GoToExit", [null]]
+            ],
+            [
+                ["#0000ff", false, 0],
                 ["Amplify", {scale:2, direction:1}],
-                //["wait", [null]],
+                ["Wait", {time:null}],
                 ["GoToExit", [null]]
             ]
+
         ];
         var field = d3.select("#anim0");
 
-        window.i = new iclData(0, icll, "Name", 5, true, {x:50, y:35});
+        window.i = new iclData(0, icll, "Name", -17, true, {x:50, y:35}, 40);
 
         i.mods.push(new exitFindMod(i, field))
 
