--- a/polygon/polygonAlgs.html
+++ b/polygon/polygonAlgs.html
@@ -160,7 +160,7 @@
                         var algName = "Triangle Search 1 (Center Start)";
                         var wireless = true;
                         var start = center;
-                        var path = utils.genPoly(center, 25, 0, degrees)
+                        var path = utils.genPoly(center, 25 / Math.sqrt(3), 0, degrees)
                         break;
                     case "3_cStart_3r":
                         var icll = [
@@ -188,7 +188,7 @@
                         var algName = "Triangle Search 1 (3 Robots + Center Start)";
                         var wireless = true;
                         var start = center;
-                        var path = utils.genPoly(center, 25, 0, degrees)
+                        var path = utils.genPoly(center, 25 / Math.sqrt(3), 0, degrees)
                         break;
                     case "3_wStart":
                         var icll = [
@@ -215,7 +215,7 @@
                         break;
                     case "3_iStart":
                         if (!infoPacket){
-                            var start = {x:50 - (-1 * Math.sqrt(3)/2), y:40};
+                            var start = {x:50 - (-1 * Math.sqrt(3)/2), y:47};
                         }
                         else {
 
@@ -223,7 +223,7 @@
                             console.log(start);
                         }
                         var degrees = s.slice(0, s.indexOf("_"));
-                        var path = utils.genPoly(center, 25, 0, degrees);
+                        var path = utils.genPoly(center, 25 / Math.sqrt(3), 0, degrees);
 
                         // Calculate the closest wall midpoint to travel to first.
                         var midpoints = [];
@@ -274,7 +274,7 @@
                         var degrees = s.slice(0, s.indexOf("_"));
                         var algName = "Square Search 1 (Center Start)";
                         var wireless = true;
-                        var path = utils.genPoly(center, 25, 45, degrees);
+                        var path = utils.genPoly(center, 25 / Math.sqrt(2), 45, degrees);
                         var start = center;
                         break;
                     case "4_cStart_3r":
@@ -360,7 +360,7 @@
                         var degrees = s.slice(0, s.indexOf("_"));
                         var algName = "Square Search 1 (Wall Start)";
                         var wireless = true;
-                        var path = utils.genPoly(center, 25, 45, degrees);
+                        var path = utils.genPoly(center, 25 / Math.sqrt(2), 45, degrees);
                         var start = utils.wallAtAngle(path, center, startOnWallAtAngle);
                         break;
 
@@ -373,7 +373,7 @@
                             var start = infoPacket.start;
                         }
                         var degrees = s.slice(0, s.indexOf("_"));
-                        var path = utils.genPoly(center, 25, 45, degrees);
+                        var path = utils.genPoly(center, 25 / Math.sqrt(2), 45, degrees);
 
                         // Calculate the closest wall midpoint to travel to first.
                         var midpoints = [];
