--- a/line/linevis.html
+++ b/line/linevis.html
@@ -16,7 +16,7 @@
             <line x1=15 y1=95 x2=80 y2=95 style="stroke:#000000;stroke-width:.25"></line>
             <line x1=15 y1=35 x2=15 y2=95 style="stroke:#000000;stroke-width:.25"></line>
 
-            <text transform="translate(10, 65)rotate(-90)" style="font-size:2.5; text-anchor:middle">Time</text>
+            <text transform="translate(5, 65)rotate(-90)" style="font-size:2.5; text-anchor:middle">Time (seconds)</text>
             <text x=80 y=30 id="exittext" style="font-size:2.5; text-anchor:middle"></text>
             <text x=80 y=30 id="terminationtext" style="font-size:2.5; text-anchor:middle"></text>
             <text x=20 y=15 id="timetext" style="font-size:2.5; text-anchor:middle"></text>
@@ -61,7 +61,7 @@
         ];
         var field = d3.select("#anim0");
 
-        window.i = new iclData(0, icll, "Name", -5, true, {x:50, y:35}, 40);
+        window.i = new iclData(0, icll, "Name", 8, true, {x:50, y:35}, 40);
 
         i.mods.push(new exitFindMod(i, field))
 
