--- a/line/linevis.html
+++ b/line/linevis.html
@@ -40,7 +40,7 @@
     function main() {
         icll = [
             [
-                ["#ff0000", false, 0],
+                ["#ff0000", false, 2],
                 ["Amplify", {scale:2, direction:-1}],
                 ["Wait", {time:null}],
                 ["GoToExit", [null]]
@@ -64,6 +64,9 @@
         window.i = new iclData(0, icll, "Name", 9, true, {x:50, y:35}, 40);
 
         i.mods.push(new exitFindMod(i, field))
+        i.mods.push(new voteSystem(i))
+        i.mods.push(new byzantine(i))
+        i.mods.push(new covered(i))
 
         i.createHistory();
         v = new iclVisual(i, field);
