first byzantine simulation working. code spacing fixed

--- a/line/linevis.html
+++ b/line/linevis.html
@@ -44,7 +44,7 @@
                 ["Amplify", {scale:2, direction:-1}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                ["Split", [null]],
+                //["Split", [null]],
                 ["GoToExit", [null]]
             ],
             [
@@ -52,7 +52,8 @@
                 ["Amplify", {scale:2, direction:-1}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                ["Split", [null]],
+                //["Split", [null]],
+                ["Go", {direction: -1}],
                 ["GoToExit", [null]]
             ],
             [
@@ -60,7 +61,8 @@
                 ["Amplify", {scale:2, direction:1}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                ["Split", [null]],
+                //["Split", [null]],
+                ["Go", {direction: 1}],
                 ["GoToExit", [null]]
             ]
 
