--- a/line/linevis.html
+++ b/line/linevis.html
@@ -34,35 +34,35 @@
         <svg viewBox="0 0 100 100" id="bots" ></svg>
         <svg viewBox="0 0 100 100" id="overLay" ></svg>
     </svg>
-    <script src="linemodules.js"></script>
-    <script src="tourist1d.js"></script>
+    <script src="../js/linemodules.js"></script>
+    <script src="../js/tourist1d.js"></script>
     <script>
     function main() {
         icll = [
             [
                 ["#ff0000", false, 2],
-                ["Amplify", {scale:2, direction:-1}],
+                ["Amplify", {scale:2, direction:-1, claimLoc:-15}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                //["Split", [null]],
+                ["Split", [null]],
                 ["GoToExit", [null]]
             ],
             [
                 ["#00ff00", false, 0],
-                ["Amplify", {scale:2, direction:-1}],
+                ["Amplify", {scale:2, direction:-1, claimLoc:0}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                //["Split", [null]],
-                ["Go", {direction: -1}],
+                ["Split", [null]],
+                //["Go", {direction: -1}],
                 ["GoToExit", [null]]
             ],
             [
                 ["#0000ff", false, 0],
-                ["Amplify", {scale:2, direction:1}],
+                ["Amplify", {scale:2, direction:1, claimLoc:0}],
                 ["Wait", {time:null}],
                 ["ResolveClaim", [null]],
-                //["Split", [null]],
-                ["Go", {direction: 1}],
+                ["Split", [null]],
+                //["Go", {direction: 1}],
                 ["GoToExit", [null]]
             ]
 
